contenerisation/kubernetes/auth-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: kamilmucik-lkequiz-maestro
spec:
  selector:
    app: auth-postgres
  type: NodePort
  ports:
   -  protocol: TCP
      port: 5433
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-postgres
  namespace: kamilmucik-lkequiz-maestro
  labels:
    app: auth-postgres
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  serviceName: "auth-postgres"
  template:
    metadata:
      labels:
        app: auth-postgres
        type: db
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: auth-postgres
          image: docker.io/bitnami/postgresql:15
          ports:
            - containerPort: 5432
              name: auth-postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /bitnami/postgresql
      volumes:
      - name: postgres-storage
        emptyDir: {}
