contenerisation/kubernetes/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  namespace: kamilmucik-lkequiz-maestro
spec:
  selector:
    app: gateway-svc
  ports:
   -  protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-svc
  namespace: kamilmucik-lkequiz-maestro
  labels:
    app: gateway-svc
    group: svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-svc
  template:
    metadata:
      labels:
        app: gateway-svc
        type: svc
    spec:
      containers:
        - name: gateway-svc
          image: kamilmucik/lkequiz-gateway-svc:1.0
          ports:
            - containerPort: 3000
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
          volumeMounts:
            - name: conf
              mountPath: /pkg/config/envs
              readOnly: false
      volumes:
        - name: conf
          configMap:
            name: gateway-svc-config
