contenerisation/kubernetes/question-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-db
  namespace: kamilmucik-lkequiz-maestro
spec:
  selector:
    app: question-postgres
  ports:
   -  protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: question-postgres
  namespace: kamilmucik-lkequiz-maestro
  labels:
    app: question-postgres
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-postgres
  serviceName: "question-postgres"
  template:
    metadata:
      labels:
        app: question-postgres
        type: db
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: question-db
          image: docker.io/bitnami/postgresql:15
          ports:
            - containerPort: 5432
              name: quest-postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /bitnami/postgresql
      volumes:
      - name: postgres-storage
        emptyDir: {}
