contenerisation/kubernetes/question-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-svc
  namespace: kamilmucik-lkequiz-maestro
spec:
  selector:
    app: question-svc
  ports:
   -  protocol: TCP
      port: 50055
      targetPort: 50055
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-svc
  namespace: kamilmucik-lkequiz-maestro
  labels:
    app: question-svc
    group: svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-svc
  template:
    metadata:
      labels:
        app: question-svc
        type: svc
    spec:
      containers:
        - name: question-svc
          image: kamilmucik/lkequiz-question-svc:1.0
          ports:
            - containerPort: 50055
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/health"
              port: 8080
          volumeMounts:
            - name: conf
              mountPath: /pkg/config/envs
              readOnly: false
      volumes:
        - name: conf
          configMap:
            name: question-svc-config
